--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EsperApp</string>
     <string name="submit">Submit</string>
     <string name="response_failure">Network Response Failure</string>
+    <string name="combination_alert">Sorry! Combination is not available</string>
     <string name="mobile_label">Mobile</string>
     <string name="storage_label">Storage</string>
     <string name="feature_label">Feature</string>
