Done displaying selected valid combination  phone data in different screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="combination_alert">Sorry! Combination is not available</string>
     <string name="mobile_label">Mobile</string>
     <string name="storage_label">Storage</string>
-    <string name="feature_label">Feature</string>
+    <string name="other_feature_label">Other Features</string>
 </resources>
